Possible race condition in ThreadIdentifierData::initializeKeyOnce and shouldCallRealDebugger. https://bugs.webkit.org/show_bug.cgi?id=64465

Reviewed by Dmitry Titov.

There isn't a good way to test this as it is very highly unlikely to occur.

Source/JavaScriptCore:

* wtf/ThreadIdentifierDataPthreads.cpp:
(WTF::ThreadIdentifierData::initializeKeyOnce): Since scoped static initialization
isn't thread-safe, change the initialization to be global.

Source/WebKit2:

* PluginProcess/mac/PluginProcessMac.mm:
(WebKit::shouldCallRealDebugger): :Since scoped static initialization
isn't thread-safe, change the initialization to be global.


Canonical link: https://commits.webkit.org/80196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90939 268f45cc-cd09-0410-ab3c-d52691b4dbfc