Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009 Google Inc. All rights reserved.
+ * Copyright (C) 2009, 2011 Google Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -39,6 +39,7 @@
 namespace WTF {
 
 pthread_key_t ThreadIdentifierData::m_key;
+static pthread_once_t onceControl = PTHREAD_ONCE_INIT;
 
 void clearPthreadHandleForIdentifier(ThreadIdentifier);
 
@@ -86,7 +87,6 @@ void ThreadIdentifierData::initializeKeyOnceHelper()
 
 void ThreadIdentifierData::initializeKeyOnce()
 {
-    static pthread_once_t onceControl = PTHREAD_ONCE_INIT;
     if (pthread_once(&onceControl, initializeKeyOnceHelper))
         CRASH();
 }
